added user and other fixes
